[package]
name = "rain_out"
version = "0.1.3"
edition = "2024"
authors = []
publish = false
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"

[profile.release]
opt-level = 3

[features]
hypersync = []
fuzzing = ["arbitrary"]


[dependencies]
clap = {version = "4.5.32", features = ["derive"]}
hypersync-client = "0.17.2"
hypersync-format = "0.4.2"
url = "2.5.4"
serde_json = "1.0.140"
serde = { version = "1.0.219", features=["derive"]}
tokio = { version = "1.43.0", features = ["macros", "fs",  "rt-multi-thread"] }
env_logger = { version = "0.10.0", default-features = false }
log = "0.4.26"
hex = "0.4.3"
sha3 = "0.11.0-pre.5"
anyhow = "1.0.97"
csv = "1.3.1"
alloy-json-abi = "0.8.23"
arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }