[package]
name = "rain-fuzz"
version = "0.0.1"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.9", features = ["arbitrary-derive"] }
rain_out = { path = "../", features=["fuzzing"]}
url = "2.5.4"
csv = "1.3.1"

[workspace]
members = ["."]

[[bin]]
name = "csv_fuzz"
path = "fuzz_targets/csv_fuzz.rs"
test = false
doc = false


[[bin]]
name = "f2"
path = "fuzz_targets/f2.rs"
test = false
doc = false

